tests/diagnostics/statements/termination/return_missing_expression/expect.txt
# exit: 1
lib.coppice:2:5: error: expected expression
      return
      ^
